--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,16 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.1</version>
 		</dependency>
+			<dependency>
+		<groupId>org.jodd</groupId>
+		<artifactId>jodd-core</artifactId>
+		<version>3.5</version>
+	</dependency>
+            <dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.2.1</version>
+			</dependency>
+            
 	</dependencies>
 </project>
