--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
 			</plugin>
 		</plugins>
 	</build>
+	 <properties>
+        <dep.jackson-core.version>2.1.3</dep.jackson-core.version>
+        <dep.jackson-databind.version>2.1.3</dep.jackson-databind.version>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -82,6 +86,10 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.1.39</version>
 		</dependency>
-            
+              <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${dep.jackson-databind.version}</version>
+        </dependency>
 	</dependencies>
 </project>
