--- a/pom.xml
+++ b/pom.xml
@@ -143,11 +143,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.1.39</version>
 		</dependency>
-              <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${dep.jackson-databind.version}</version>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>com.fasterxml.jackson.core</groupId> -->
+<!--             <artifactId>jackson-databind</artifactId> -->
+<!--             <version>${dep.jackson-databind.version}</version> -->
+<!--         </dependency> -->
 <!-- 		util结束 -->
 	</dependencies>
 </project>
