--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,15 @@
 <!--             <version>${dep.jackson-databind.version}</version> -->
 <!--         </dependency> -->
 <!-- 		util结束 -->
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>3.1</version>
+		</dependency>
+       <dependency>
+				<groupId>asm</groupId>
+				<artifactId>asm</artifactId>
+				<version>3.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
