--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,14 @@
 			</plugin>
 		</plugins>
 	</build>
-	 <properties>
-        <dep.jackson-core.version>2.1.3</dep.jackson-core.version>
-        <dep.jackson-databind.version>2.1.3</dep.jackson-databind.version>
-        <spring.version>3.2.3.RELEASE</spring.version>
-    </properties>
+	<properties>
+		<dep.jackson-core.version>2.1.3</dep.jackson-core.version>
+		<dep.jackson-databind.version>2.1.3</dep.jackson-databind.version>
+		<spring.version>3.2.3.RELEASE</spring.version>
+	</properties>
 	<dependencies>
-	<!--  spring jar -->
-	<dependency>
+		<!-- spring jar -->
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
@@ -74,13 +74,18 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-	<!-- 		mvc -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<!-- mvc -->
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
 			<version>2.3.16</version>
 		</dependency>
-<!-- 	orm -->
+		<!-- orm -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -91,14 +96,14 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.24</version>
 		</dependency>
-<!-- 		test -->
+		<!-- test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
 
-<!-- 		log -->
+		<!-- log -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -114,8 +119,8 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.1</version>
 		</dependency>
-<!-- 		util开始 -->
-	<!-- jod -->
+		<!-- util开始 -->
+		<!-- jod -->
 		<dependency>
 			<groupId>org.jodd</groupId>
 			<artifactId>jodd</artifactId>
@@ -137,27 +142,27 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.0</version>
 		</dependency>
-		<!-- 		deal json -->
+		<!-- deal json -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.1.39</version>
 		</dependency>
-<!--         <dependency> -->
-<!--             <groupId>com.fasterxml.jackson.core</groupId> -->
-<!--             <artifactId>jackson-databind</artifactId> -->
-<!--             <version>${dep.jackson-databind.version}</version> -->
-<!--         </dependency> -->
-<!-- 		util结束 -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.fasterxml.jackson.core</groupId> -->
+		<!-- <artifactId>jackson-databind</artifactId> -->
+		<!-- <version>${dep.jackson-databind.version}</version> -->
+		<!-- </dependency> -->
+		<!-- util结束 -->
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>3.1</version>
 		</dependency>
-       <dependency>
-				<groupId>asm</groupId>
-				<artifactId>asm</artifactId>
-				<version>3.3.1</version>
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>3.3.1</version>
 		</dependency>
 	</dependencies>
 </project>
