--- a/pom.xml
+++ b/pom.xml
@@ -180,16 +180,16 @@
 			<artifactId>asm</artifactId>
 			<version>3.3.1</version>
 		</dependency>
-		<dependency>
-			<groupId>com.aicai.coreservice</groupId>
-			<artifactId>coreservice-client</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-				<groupId>com.aicai.coreservice</groupId>
-				<artifactId>coreservice-common</artifactId>
-				<version>1.3.0-SNAPSHOT</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.aicai.coreservice</groupId> -->
+<!-- 			<artifactId>coreservice-client</artifactId> -->
+<!-- 			<version>1.3.0-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 				<groupId>com.aicai.coreservice</groupId> -->
+<!-- 				<artifactId>coreservice-common</artifactId> -->
+<!-- 				<version>1.3.0-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
 
 	</dependencies>
 </project>
