--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,6 @@
 			<groupId>asm</groupId>
 			<artifactId>asm</artifactId>
 			<version>3.3.1</version>
-		</dependency>
 <!-- 		<dependency> -->
 <!-- 			<groupId>com.aicai.coreservice</groupId> -->
 <!-- 			<artifactId>coreservice-client</artifactId> -->
@@ -190,6 +189,12 @@
 <!-- 				<artifactId>coreservice-common</artifactId> -->
 <!-- 				<version>1.3.0-SNAPSHOT</version> -->
 <!-- 		</dependency> -->
+		</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>com.jarfile</groupId> -->
+<!-- 		<artifactId>jarfile</artifactId> -->
+<!-- 		<version>1.0</version> -->
+<!-- 	</dependency> -->
 
 	</dependencies>
 </project>
