--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
 			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		
 		<!-- mvc -->
 		<dependency>
 			<groupId>org.freemarker</groupId>
@@ -168,6 +174,7 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>16.0.1</version>
+				<scope>compile</scope>
 		</dependency>
 		<!-- apache common -->
 		<dependency>
@@ -206,6 +213,8 @@
 			<artifactId>asm</artifactId>
 			<version>3.3.1</version>
 			<scope>compile</scope>
+		</dependency>
+			
 <!-- 		<dependency> -->
 <!-- 			<groupId>com.aicai.coreservice</groupId> -->
 <!-- 			<artifactId>coreservice-client</artifactId> -->
@@ -216,7 +225,6 @@
 <!-- 				<artifactId>coreservice-common</artifactId> -->
 <!-- 				<version>1.3.0-SNAPSHOT</version> -->
 <!-- 		</dependency> -->
-		</dependency>
 <!-- 	<dependency> -->
 <!-- 		<groupId>com.jarfile</groupId> -->
 <!-- 		<artifactId>jarfile</artifactId> -->
