--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,16 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
+<!-- 		<plugins> -->
+<!-- 			<plugin> -->
+<!-- 			<artifactId>maven-compiler-plugin</artifactId> -->
+<!-- 			<version>3.1</version> -->
+<!-- 			<configuration> -->
+<!-- 			<source>1.7</source> -->
+<!-- 			<target>1.7</target> -->
+<!-- 			</configuration> -->
+<!-- 			</plugin> -->
+<!-- 		</plugins> -->
 	</build>
 	<properties>
 		<dep.jackson-core.version>2.1.3</dep.jackson-core.version>
@@ -101,13 +101,14 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-		
+
 		<!-- mvc -->
-		 <dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>3.0</version>
+		<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>3.0.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
@@ -133,7 +134,7 @@
 			<version>1.6</version>
 			<scope>compile</scope>
 		</dependency>
-            
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -179,7 +180,7 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>16.0.1</version>
-				<scope>compile</scope>
+			<scope>compile</scope>
 		</dependency>
 		<!-- apache common -->
 		<dependency>
@@ -219,42 +220,42 @@
 			<version>3.3.1</version>
 			<scope>compile</scope>
 		</dependency>
-			
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.aicai.coreservice</groupId> -->
-<!-- 			<artifactId>coreservice-client</artifactId> -->
-<!-- 			<version>1.3.0-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 				<groupId>com.aicai.coreservice</groupId> -->
-<!-- 				<artifactId>coreservice-common</artifactId> -->
-<!-- 				<version>1.3.0-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
-<!-- 	<dependency> -->
-<!-- 		<groupId>com.jarfile</groupId> -->
-<!-- 		<artifactId>jarfile</artifactId> -->
-<!-- 		<version>1.0</version> -->
-<!-- 	</dependency> -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>com.aicai.coreservice</groupId> -->
+		<!-- <artifactId>coreservice-client</artifactId> -->
+		<!-- <version>1.3.0-SNAPSHOT</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.aicai.coreservice</groupId> -->
+		<!-- <artifactId>coreservice-common</artifactId> -->
+		<!-- <version>1.3.0-SNAPSHOT</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.jarfile</groupId> -->
+		<!-- <artifactId>jarfile</artifactId> -->
+		<!-- <version>1.0</version> -->
+		<!-- </dependency> -->
 
 
-<!-- rpc start -->
-<!-- dubbo -->
-      <dependency>
-         <groupId>com.alibaba</groupId>
-         <artifactId>dubbo</artifactId>
-         <version>2.0.13</version>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.zookeeper</groupId>
-         <artifactId>zookeeper</artifactId>
-         <version>3.3.6</version>
-         <exclusions>
-            <exclusion>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-            </exclusion>
-         </exclusions>
-      </dependency>
-<!-- rpc end-->
+		<!-- rpc start -->
+		<!-- dubbo -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>2.0.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.3.6</version>
+			<exclusions>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- rpc end -->
 	</dependencies>
 </project>
