--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,16 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-<!-- 		<plugins> -->
-<!-- 			<plugin> -->
-<!-- 			<artifactId>maven-compiler-plugin</artifactId> -->
-<!-- 			<version>3.1</version> -->
-<!-- 			<configuration> -->
-<!-- 			<source>1.7</source> -->
-<!-- 			<target>1.7</target> -->
-<!-- 			</configuration> -->
-<!-- 			</plugin> -->
-<!-- 		</plugins> -->
+		<!-- <plugins> -->
+		<!-- <plugin> -->
+		<!-- <artifactId>maven-compiler-plugin</artifactId> -->
+		<!-- <version>3.1</version> -->
+		<!-- <configuration> -->
+		<!-- <source>1.7</source> -->
+		<!-- <target>1.7</target> -->
+		<!-- </configuration> -->
+		<!-- </plugin> -->
+		<!-- </plugins> -->
 	</build>
 	<properties>
 		<dep.jackson-core.version>2.1.3</dep.jackson-core.version>
@@ -104,11 +104,11 @@
 
 		<!-- mvc -->
 		<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>javax.servlet-api</artifactId>
-		<version>3.0.1</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
@@ -256,6 +256,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+	<!-- hessian -->
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>4.0.7</version>
+		</dependency>
+
 		<!-- rpc end -->
 	</dependencies>
 </project>
