--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,17 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-		<!-- <plugins> -->
-		<!-- <plugin> -->
-		<!-- <artifactId>maven-compiler-plugin</artifactId> -->
-		<!-- <version>3.1</version> -->
-		<!-- <configuration> -->
-		<!-- <source>1.7</source> -->
-		<!-- <target>1.7</target> -->
-		<!-- </configuration> -->
-		<!-- </plugin> -->
-		<!-- </plugins> -->
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 	<properties>
 		<dep.jackson-core.version>2.1.3</dep.jackson-core.version>
@@ -149,11 +150,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- log -->
+		<!-- log log4j -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -162,12 +163,24 @@
 			<version>1.6.1</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- 加入这个slf4j-log4j12 会自动引入log4j -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.slf4j</groupId> -->
+		<!-- <artifactId>slf4j-log4j12</artifactId> -->
+		<!-- <version>1.6.1</version> -->
+		<!-- </dependency> -->
+		<!-- logback -->
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.6.1</version>
-			<scope>compile</scope>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>0.9.29</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>0.9.29</version>
+		</dependency>
+
 		<!-- util开始 -->
 		<!-- jod -->
 		<dependency>
@@ -256,7 +269,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	<!-- hessian -->
+		<!-- hessian -->
 		<dependency>
 			<groupId>com.caucho</groupId>
 			<artifactId>hessian</artifactId>
