--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<resources>
+			<resource>
+					<directory>src</directory>
+					<excludes>
+						<exclude>**/*.java</exclude>
+					</excludes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
