add activemq dependences

--- a/pom.xml
+++ b/pom.xml
@@ -11,20 +11,20 @@
 		<spring.version>3.2.3.RELEASE</spring.version>
 	</properties>
 	<build>
-<!-- 		<sourceDirectory>src</sourceDirectory> -->
-<!-- 		<resources> -->
-<!-- 			<resource> -->
-<!-- 				<directory>src/main/resources</directory> -->
-<!-- 			</resource> -->
-<!-- 		</resources> -->
-<!-- 		<resources> -->
-<!-- 			<resource> -->
-<!-- 				<directory>src</directory> -->
-<!-- 				<excludes> -->
-<!-- 					<exclude>**/*.java</exclude> -->
-<!-- 				</excludes> -->
-<!-- 			</resource> -->
-<!-- 		</resources> -->
+		<!-- <sourceDirectory>src</sourceDirectory> -->
+		<!-- <resources> -->
+		<!-- <resource> -->
+		<!-- <directory>src/main/resources</directory> -->
+		<!-- </resource> -->
+		<!-- </resources> -->
+		<!-- <resources> -->
+		<!-- <resource> -->
+		<!-- <directory>src</directory> -->
+		<!-- <excludes> -->
+		<!-- <exclude>**/*.java</exclude> -->
+		<!-- </excludes> -->
+		<!-- </resource> -->
+		<!-- </resources> -->
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -248,5 +248,12 @@
 			<version>4.0.7</version>
 		</dependency>
 		<!-- rpc end -->
+		<!-- jms -->
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-spring</artifactId>
+			<version>5.8.0</version>
+		</dependency>
+		<!-- jms end -->
 	</dependencies>
 </project>
