--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,11 @@
 			<artifactId>activemq-spring</artifactId>
 			<version>5.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		<!-- jms end -->
 	</dependencies>
 </project>
