--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+		</dependency>
 		<!-- log log4j -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
