test add unitils,dbunit test

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,16 @@
 			<artifactId>mockito-all</artifactId>
 			<version>1.9.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.unitils</groupId>
+			<artifactId>unitils-core</artifactId>
+			<version>3.4.2</version>
+		</dependency>
 		<!-- log log4j -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
