--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,23 @@
 		<!-- <artifactId>jackson-databind</artifactId> -->
 		<!-- <version>${dep.jackson-databind.version}</version> -->
 		<!-- </dependency> -->
+		<!-- 		为了引入json-lib -->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.ezmorph</groupId>
+			<artifactId>ezmorph</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<!-- 		为了引入json-lib -->
 		<!-- util结束 -->
 		<dependency>
 			<groupId>cglib</groupId>
