--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 		<dep.jackson-core.version>2.1.3</dep.jackson-core.version>
 		<dep.jackson-databind.version>2.1.3</dep.jackson-databind.version>
 		<spring.version>3.2.3.RELEASE</spring.version>
+		<junit.version>4.11</junit.version>
+		<java.version>1.7</java.version>
+		<plugin.clean.version>2.6.1</plugin.clean.version>
+		<plugin.compiler.version>3.2</plugin.compiler.version>
+		<plugin.war.version>2.5</plugin.war.version>
 	</properties>
 	<build>
 		<!-- <sourceDirectory>src</sourceDirectory> -->
@@ -38,10 +43,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>${plugin.compiler.version}</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
