--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.github.abel533</groupId>
+			<artifactId>mapper</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 		<!-- test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
