--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,12 @@
+#http://www.cnblogs.com/iteagle/archive/2010/04/23/1718365.html
+#-------------
 #config root logger  
-log4j.rootLogger = TRACE,system.out  
+log4j.rootLogger = TRACE,system.out,thisProject.file.out
+#console
 log4j.appender.system.out=org.apache.log4j.ConsoleAppender  
 log4j.appender.system.out.layout=org.apache.log4j.PatternLayout  
-log4j.appender.system.out.layout.ConversionPattern=MINAServer Logger-->%5p{%F:%L}-%m%n  
-  
-#config this Project.file logger  
+log4j.appender.system.out.layout.ConversionPattern=log4j's logger-->%5p{%F:%L}-%m%n  
+#file  
 log4j.logger.thisProject.file=TRACE,thisProject.file.out  
 log4j.appender.thisProject.file.out=org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.thisProject.file.out.File=logContentFile.log  
