--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,13 +2,13 @@
 #http://blog.csdn.net/maggiehexu/article/details/6093534
 #-------------
 #config root logger  
-log4j.rootLogger = TRACE,system.out,thisProject.file.out
+log4j.rootLogger = ERROR,system.out,thisProject.file.out
 #console
 log4j.appender.system.out=org.apache.log4j.ConsoleAppender  
 log4j.appender.system.out.layout=org.apache.log4j.PatternLayout  
 log4j.appender.system.out.layout.ConversionPattern=log4j's logger-->%5p{%F:%L}-%m%n  
 #file  
-log4j.logger.thisProject.file=TRACE,thisProject.file.out  
+log4j.logger.thisProject.file=info,thisProject.file.out  
 log4j.appender.thisProject.file.out=org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.thisProject.file.out.File=logContentFile.log  
 log4j.appender.thisProject.file.out.layout=org.apache.log4j.PatternLayout  
