--- a/pom.xml
+++ b/pom.xml
@@ -76,10 +76,15 @@
 			<version>1.1.1</version>
 		</dependency>
 		<!-- hibernate -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-core</artifactId> -->
+<!-- 			<version>3.6.1.Final</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>3.6.1.Final</version>
+			<version>4.3.1.Final</version>
 		</dependency>
 		<!-- mvc -->
 		<dependency>
