--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 #http://blog.csdn.net/maggiehexu/article/details/6093534
 #-------------
 #config root logger  
-log4j.rootLogger = ERROR,system.out,thisProject.file.out
+log4j.rootLogger = info,system.out,thisProject.file.out
 #console
 log4j.appender.system.out=org.apache.log4j.ConsoleAppender  
 log4j.appender.system.out.layout=org.apache.log4j.PatternLayout  
@@ -12,3 +12,14 @@ log4j.logger.thisProject.file=info,thisProject.file.out
 log4j.appender.thisProject.file.out=org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.thisProject.file.out.File=logContentFile.log  
 log4j.appender.thisProject.file.out.layout=org.apache.log4j.PatternLayout  
+
+
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+ 
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.java.sql.ResultSet=DEBUG
