--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,16 @@
 <!-- 		<version>0.9.29</version> -->
 <!-- 		</dependency> -->
 		<!-- util开始 -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.4.1</version>
+		</dependency>
 		<!-- jod -->
 		<dependency>
 			<groupId>org.jodd</groupId>
