--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -24,4 +24,6 @@ log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG
 log4j.logger.java.sql.ResultSet=DEBUG
 
-log4j.logger.com.javaapi.test=TRACE
+log4j.logger.com.javaapi.test=INFO
+#com.javaapi.test.dao  自己得dao层设置为Trace级别就能让mybatis打印所有返回值
+log4j.logger.com.javaapi.test.dao=TRACE
