test java8 Lambda

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<dep.jackson-databind.version>2.4.4</dep.jackson-databind.version>
 		<spring.version>3.2.6.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
-		<java.version>1.8</java.version>
+		<java.version>1.7</java.version>
 		<plugin.clean.version>2.6.1</plugin.clean.version>
 		<plugin.compiler.version>3.2</plugin.compiler.version>
 		<plugin.war.version>2.5</plugin.war.version>
@@ -28,6 +28,7 @@
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*.xml</include>
+                    <include>**/*.properties</include>
                 </includes>
             </resource>
         </resources>
@@ -236,11 +237,11 @@
 
 		<!-- logback -->
 		<!-- 自动引入 slf4j,logback core -->
-<!-- 		<dependency> -->
-<!-- 		<groupId>ch.qos.logback</groupId> -->
-<!-- 		<artifactId>logback-classic</artifactId> -->
-<!-- 		<version>0.9.29</version> -->
-<!-- 		</dependency> -->
+ 		<!--<dependency>-->
+ 		<!--<groupId>ch.qos.logback</groupId>-->
+ 		<!--<artifactId>logback-classic</artifactId>-->
+ 		<!--<version>0.9.29</version>-->
+ 		<!--</dependency>-->
 		<!-- util开始 -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
