--- a/pom.xml
+++ b/pom.xml
@@ -550,6 +550,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>3.3.4</version>
+        </dependency>
         <!-- jms end -->
         <!-- es-->
         <dependency>
