--- a/src/main/java/com/javaapi/test/testUtil/fileUtil/Util/config.properties
+++ b/src/main/java/com/javaapi/test/testUtil/fileUtil/Util/config.properties
@@ -1,6 +1,6 @@
-jdbc.url.system32=jdbc:mysql://123.56.5.146:3306/system32?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf8
-jdbc.username.system32=   devops
-jdbc.password.system32=         foqUei7mAFh2TqCw
+jdbc.url.system32=
+jdbc.username.system32=
+jdbc.password.system32=
 
 jdbc.url.avideo=
 jdbc.username.avideo=
