--- a/src/main/java/com/javaapi/test/testUtil/fileUtil/Util/config.properties
+++ b/src/main/java/com/javaapi/test/testUtil/fileUtil/Util/config.properties
@@ -1,6 +1,8 @@
-jdbc.url.system32=
-jdbc.username.system32=
-jdbc.password.system32=
+
+#jdbc.url.system32=jdbc:mysql://192.168.60.99:3306/system32?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf8
+#jdbc.username.system32=cache
+#jdbc.password.system32=test2
+
 
 jdbc.url.avideo=
 jdbc.username.avideo=
